Add colours enhancement and segmentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O2 -Wall")
 add_definitions(-std=c++0x)
 
 find_package( OpenCV REQUIRED )
-add_executable( POBR ztm.cpp Common.cpp Momentum.cpp Operations.cpp )
-target_link_libraries( POBR ${OpenCV_LIBS} )
+add_executable( ztm ztm.cpp Common.cpp Momentum.cpp Operations.cpp Segmentation.cpp)
+add_executable( test test.cpp Common.cpp Momentum.cpp Operations.cpp )
+target_link_libraries( ztm ${OpenCV_LIBS} )
+target_link_libraries( test ${OpenCV_LIBS} -lboost_unit_test_framework )
